--- a/style.css
+++ b/style.css
@@ -1,17 +1,3 @@
-* {
-    /* border: 2px solid red; */
-}
-
-/* #main {
-    background-color: #5a5a5a !important;
-    color: #fff !important;
-}
-#form-box {
-    background-color: #444444 !important;
-} */
-
-/* ===== */
-
 @font-face {
     font-family: 'Cal Sans';
     src: url('./assets/fonts/CalSans-Regular.woff2') format('woff2'),
@@ -56,25 +42,26 @@
 
 body {
     display: flex;
-    align-items: flex-start;
-    height: 100vh;
     font-family: var(--system-ui);
+    background-color: var(--main-bg-color);
+    min-height: 100vh;
 }
 
 #sidebar {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    flex: 1 1 auto;
-    max-width: 30vw;
-    height: inherit;
+    flex: 0 0 auto;
+    width: fit-content;
     background-color: #000;
     background-image: url(./assets/img/sidebar-background.jpg);
     background-size: cover;
+    height: inherit;
 
     .logo-area {
         width: 100%;
-        height: 10rem;
+        height: fit-content;
+        padding: 2rem 4rem;
         background-color: rgba(0, 0, 0, 0.7);
         margin-top: 20vh;
         display: flex;
@@ -83,13 +70,14 @@ body {
         cursor: default;
 
         img {
-            height: 6rem;
+            height: clamp(2rem, 5vw, 6rem);
         }
 
         .text {
             color: #fff;
-            font-size: 4rem;
+            font-size: clamp(1rem, 5vw, 4rem);
             font-family: var(--logo-fonts);
+            text-wrap: nowrap;
         }
     }
 
@@ -117,8 +105,7 @@ body {
     flex: 1 1 auto;
     background-color: var(--main-bg-color);
     color: var(--main-font-color);
-    height: fit-content;
-    height: 100%;
+    height: inherit;
 }
 
 #form-box {
@@ -129,7 +116,6 @@ body {
     background-color: var(--form-bg-color);
     padding: 2rem 4rem;
     width: 100%;
-    /* min-height: 20rem; */
     height: fit-content;
     margin: 2rem 0;
     box-shadow: 0 6px rgb(231, 231, 231);
